# neurospin_to_bids

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  neuro2bids_addon.py  neurospin_to_bids.py  pyproject.toml  setup.cfg  setup.py  todo.txt  tox.ini
.github/workflows/: codeql-analysis.yml  tests.yml
neurospin_to_bids/: __main__.py  acquisition_db.py  dicom_database.py  exp_info.py  utils.py
requirements/: production.txt  py3.10-production.txt  py3.10-test.in  py3.10-test.txt  py3.12-production.txt  py3.12-test.in  py3.12-test.txt  py3.13-production.txt  py3.13-test.txt  py3.8-production.txt  py3.8-test.txt  test.in  test.txt  update.sh
src/neurospin_to_bids/: __main__.py  acquisition_db.py  autolist.py  bids.py  exp_info.py  postprocess.py  utils.py
test_dataset/example_2/: participants_to_import.tsv
tests/: test_app.py  test_autolist.py  test_bids.py  test_import.py
