[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neurospin_to_bids"
version = "0.1.0"
description = "Tool for exporting imaging data from the NeuroSpin archive in BIDS format"
authors = [
    {name = "Isabelle Denghien", email = "isabelle.denghien@cea.fr"},
]
dependencies = [
    "PyYAML",
    "bids-validator",
    "logutils",
    "mne-bids",
    "pandas",
    "pydeface",
    "pydicom",
    "setuptools",  # actually a dependency of pydeface (for pkg_resources)
]
requires-python = ">=3.8"
readme = "README.md"
classifiers = [
    "License :: CeCILL-B Free Software License Agreement (CECILL-B)",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.urls]
Homepage = "https://github.com/neurospin/neurospin_to_bids"
Issues = "https://github.com/neurospin/neurospin_to_bids/issues"

[project.optional-dependencies]
dev = [
    "pip-tools",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "tox >= 4.4.0",
]

[project.scripts]
neurospin_to_bids = "neurospin_to_bids.__main__:main"

[tool.setuptools.package-data]
neurospin_to_bids = [
    "template_deface/*.nii.gz",
]

[tool.codespell]
skip = [".tox"]

[tool.ruff.lint]
extend-select = [
    "B",
    "C4",
    "ISC",
    "LOG",
    "PIE",
    "PYI",
    "SIM",
    "FLY",
    "I",
    "N",
    "PGH",
    "PLE",
    "UP",
    "FURB",
    "RUF",
]
ignore = [
    "B028",
    "B904",
    "N802",  # Gives false positives when a name contains an uppercase acronym
    "PIE790",
]

[tool.ruff.format]
quote-style = "single"

[tool.coverage.run]
source = ["neurospin_to_bids"]
branch = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]
