[metadata]
name = neurospin_to_bids
author = Isabelle Denghien
author_email = isabelle.denghien@cea.fr
description = Tool for exporting imaging data from the NeuroSpin archive in BIDS format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/neurospin/neurospin_to_bids
classifiers =
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
packages = neurospin_to_bids
include_package_data = True  # include data files declared in MANIFEST.in
python_requires = ~=3.6
install_requires =
    bids-validator
    mne-bids
    pandas
    pydeface
    pydicom
    PyYAML

[options.extras_require]
dev =
    check-manifest
    flake8
    pep8-naming

[options.entry_points]
console_scripts =
    neurospin_to_bids=neurospin_to_bids.__main__:main
