[metadata]
name = neurospin_to_bids
author = Isabelle Denghien
author_email = isabelle.denghien@cea.fr
description = Tool for exporting imaging data from the NeuroSpin archive in BIDS format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/neurospin/neurospin_to_bids
classifiers =
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
packages = neurospin_to_bids
python_requires = ~=3.6
install_requires =
    bids-validator
    mne-bids
    pandas
    pydeface
    pydicom
    PyYAML

[options.extras_require]
dev =
    check-manifest
    flake8
    pep8-naming
    pytest

[options.entry_points]
console_scripts =
    # We cannot keep the legacy name neurospin_to_bids.py because that leads to
    # a name conflict with the neurospin_to_bids package (ModuleNotFoundError:
    # No module named 'neurospin_to_bids.__main__'; 'neurospin_to_bids' is not
    # a package).
    neurospin_to_bids=neurospin_to_bids.__main__:main

[options.package_data]
neurospin_to_bids =
    template_deface/*.nii.gz
